# gstreamer-media-SDK

./: .gitignore  AUTHORS  CMakeLists.txt  NEWS  README  README.USAGE  README.example_usage  README.md  config.h  config.h.in  gst_msdk.cbp  gst_msdk.depend  gst_msdk.layout  gstmfx.c  gstmfxcodecmap.c  gstmfxcontext.c  gstmfxcontext.h  gstmfxdec.c  gstmfxdec.h  gstmfxdecoder.c  gstmfxdecoder.h  gstmfxdecoder_priv.h  gstmfxdisplay.h  gstmfxdisplay_priv.h  gstmfxdisplay_x11.c  gstmfxdisplay_x11_priv.h  gstmfxdisplaycache.h  gstmfxenc.c  gstmfxenc.h  gstmfxobject.c  gstmfxobject.h  gstmfxobjectpool.c  gstmfxobjectpool.h  gstmfxobjectpool_priv.h  gstmfxpluginbase.h  gstmfxpluginutil.c  gstmfxpluginutil.h  gstmfxsink.c  gstmfxsurface.c  gstmfxsurface.h  (+29 more)
cmake/: FindBaseDependencies.cmake  FindMediaSDK.cmake  FindSinkDependencies.cmake  FindVC1ParserDependencies.cmake  ProjectConfig.cmake  ProjectInfo.cmake  cmake_uninstall.cmake.in
gst/: CMakeLists.txt  gstmfxcompat.h  gstmfxdec.c  gstmfxdec.h  gstmfxpluginutil.c  gstmfxpluginutil.h  gstmfxsink.h  gstmfxvideomemory.c  gstmfxvideomemory.h  gstmfxvideometa.c  gstmfxvideometa.h  meson.build
gst-libs/: CMakeLists.txt  gstmfxdecoder.c  gstmfxdisplay.h  gstmfxdisplay_priv.h  gstmfxdisplay_x11.c  gstmfxminiobject.c  gstmfxobject_priv.h  gstmfxobjectpool.c  gstmfxobjectpool.h  gstmfxsurfaceproxy.c  gstmfxwindow_x11.h  gstmfxwindow_x11_priv.h  gstvaapiimage.c  gstvaapiimagepool.h  meson.build  sysdeps.h  video-utils.c
gst-libs/mfx/: CMakeLists.txt  egl_compat.h  egl_vtable.h  gstmfxallocator.h  gstmfxallocator_d3d11.c  gstmfxallocator_d3d11.h  gstmfxallocator_vaapi.c  gstmfxcodecmap.c  gstmfxcodecmap.h  gstmfxcompositefilter.c  gstmfxcompositefilter.h  gstmfxcontext.c  gstmfxcontext.h  gstmfxcontrolbindingproxy.c  gstmfxcontrolbindingproxy.h  gstmfxd3d11device.c  gstmfxd3d11device.h  gstmfxdebug.h  gstmfxdecoder.c  gstmfxdecoder.h  gstmfxdisplay.c  gstmfxdisplay.h  gstmfxdisplay_drm.c  gstmfxdisplay_drm.h  gstmfxdisplay_drm_priv.h  gstmfxdisplay_egl.c  gstmfxdisplay_egl.h  gstmfxdisplay_egl_priv.h  gstmfxdisplay_priv.h  gstmfxdisplay_wayland.c  gstmfxdisplay_wayland.h  gstmfxdisplay_wayland_priv.h  gstmfxdisplay_x11.c  gstmfxdisplay_x11.h  gstmfxdisplay_x11_priv.h  gstmfxdisplaycache.c  gstmfxdisplaycache.h  gstmfxencoder.c  gstmfxencoder.h  gstmfxencoder_h264.c  (+90 more)
gst-libs/mfx/common/: gstbitwriter.c  gstbitwriter.h
gst-libs/mfx/d3d11/: gstmfxdevice.c  gstmfxdevice.h  gstmfxwindow_d3d11.c  gstmfxwindow_d3d11.h  gstmfxwindow_d3d11_priv.h
gst-libs/mfx/egl/: egl_compat.h  egl_vtable.h  gstmfxdisplay_egl.c  gstmfxdisplay_egl.c~  gstmfxdisplay_egl.h  gstmfxdisplay_egl_priv.h  gstmfxtexture_egl.c  gstmfxtexture_egl.c~  gstmfxtexture_egl.h  gstmfxutils_egl.c  gstmfxutils_egl.h  gstmfxwindow_egl.c  gstmfxwindow_egl.c~  gstmfxwindow_egl.h  ogl_compat.h
gst-libs/mfx/wayland/: gstmfxdisplay_wayland.c  gstmfxdisplay_wayland.h  gstmfxdisplay_wayland_priv.h  gstmfxwindow_wayland.c  gstmfxwindow_wayland.h  scaler-client-protocol.h  scaler-protocol.c  viewporter-client-protocol.h  viewporter-protocol.c  wayland-drm-protocol.c
gst-libs/mfx/x11/: gstmfxdisplay_x11.c  gstmfxdisplay_x11.h  gstmfxdisplay_x11_priv.h  gstmfxutils_x11.c  gstmfxutils_x11.h  gstmfxwindow_x11.c  gstmfxwindow_x11.c~  gstmfxwindow_x11.h  gstmfxwindow_x11_priv.h
gst/mfx/: CMakeLists.txt  gstcompat.h  gstmfx.c  gstmfxcodecmap.h  gstmfxcompat.h  gstmfxcontext.c  gstmfxdec.c  gstmfxdec.h  gstmfxenc.c  gstmfxenc.h  gstmfxenc_h264.c  gstmfxenc_h264.h  gstmfxenc_h265.c  gstmfxenc_h265.h  gstmfxenc_jpeg.c  gstmfxenc_jpeg.h  gstmfxenc_mpeg2.c  gstmfxenc_mpeg2.h  gstmfxpluginbase.c  gstmfxpluginbase.h  gstmfxpluginutil.c  gstmfxpluginutil.h  gstmfxpostproc.c  gstmfxpostproc.h  gstmfxsink.c  gstmfxsink.h  gstmfxsinkbin.c  gstmfxsinkbin.h  gstmfxtexture.c  gstmfxtexture_egl.c  gstmfxutils_h264.c  gstmfxutils_h264.h  gstmfxvideobufferpool.c  gstmfxvideobufferpool.h  gstmfxvideocontext.c  gstmfxvideocontext.h  gstmfxvideomemory.c  gstmfxvideomemory.h  gstmfxvideometa.c  gstmfxvideometa.h  (+2 more)
gst_msdk/: gst_msdk.vcxproj  gst_msdk.vcxproj.filters  version.h
gst_msdk/gst-libs/mfx/: gstmfxdecoder.h  gstmfxencoder.c  gstmfxencoder.h  gstmfxencoder_h264.c  gstmfxencoder_jpeg.c  gstmfxencoder_mpeg2.h  gstmfxencoder_priv.h  gstmfxfilter.c  gstmfxfilter.h  gstmfxprofile.h  gstmfxsurface.h  gstmfxsurfacepool.h  gstmfxtask.c  gstmfxtask.h  gstmfxtaskaggregator.c  gstmfxtaskaggregator.h  gstmfxvalue.c  sysdeps.h  video-format.h
gst_msdk/gst/mfx/: gstmfx.c  gstmfxenc.c  gstmfxenc.h  gstmfxpluginbase.h  gstmfxsink.c  gstmfxvideobufferpool.c  gstmfxvideobufferpool.h  gstmfxvideocontext.c  gstmfxvideomemory.c  gstmfxvideometa.h
parsers/: CMakeLists.txt  gstvc1parse.c  gstvc1parse.h  meson.build
win32/common/: libgstmfx.def  libgstmfxvc1parse.def
